--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,45 @@ body {
   width: 100%;
 }
 
+body {
+  font: 24px/48px -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
 #map {
   height: 100%;
   width: 100%;
+}
+
+#label {
+  background: #000;
+  color: #fff;
+  display: flex;
+  height: 68px;
+  justify-content: center;
+  opacity: 0.7;
+  padding: 20px 20px 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100000;
+}
+
+#label section {
+  display: block;
+  padding-right: 40px;
+  width: 140px;
+}
+
+#label section span {
+  display: block;
+}
+
+#label section .label {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+#label section .value {
+  font-weight: 600;
 }
