--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,13 @@
-* {
-  border: none;
+body {
   margin: 0;
-  outline: 0;
-  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
-body {
-  font: 24px/48px -apple-system, BlinkMacSystemFont, sans-serif;
-}
-
-#map {
-  height: 100%;
-  width: 100%;
-}
-
-#label {
-  background: #000;
-  color: #fff;
-  display: flex;
-  height: 68px;
-  justify-content: center;
-  opacity: 0.7;
-  padding: 20px 20px 10px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 100000;
-}
-
-#label section {
-  display: block;
-  padding-right: 40px;
-  width: 140px;
-}
-
-#label section span {
-  display: block;
-}
-
-#label section .label {
-  font-size: 14px;
-  line-height: 20px;
-}
-
-#label section .value {
-  font-weight: 600;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
