--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,16 +1,3 @@
-* {
-  border: none;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
-body {
+.App {
   font: 24px/48px -apple-system, BlinkMacSystemFont, sans-serif;
 }
