--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -7,9 +7,8 @@
   opacity: 0.7;
   padding: 20px 20px 10px;
   position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  bottom: 10px;
+  right: 10px;
   z-index: 100000;
 }
 
