--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -19,6 +19,7 @@
 .Timeline .Plane::after {
   color: #fff;
   content: '\2708';
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .Timeline .Flight {
