--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -2,20 +2,19 @@
   background: #000;
   color: #fff;
   display: flex;
-  height: 68px;
   justify-content: center;
   opacity: 0.7;
-  padding: 20px 20px 10px;
+  padding: 10px;
   position: absolute;
-  bottom: 50px;
+  bottom: 70px;
   right: 10px;
   z-index: 100000;
 }
 
 .Legend section {
   display: block;
-  padding-right: 40px;
-  width: 140px;
+  padding-right: 20px;
+  width: 100px;
 }
 
 .Legend section span {
@@ -28,5 +27,7 @@
 }
 
 .Legend section .value {
+  font-size: 16px;
   font-weight: 600;
+  line-height: 26px;
 }
