--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,7 +1,8 @@
 .Timeline {
   background: #000;
-  height: 40px;
+  height: 60px;
   opacity: 0.7;
+  overflow: hidden;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -11,9 +12,9 @@
 
 .Timeline .Plane {
   position: absolute;
-  margin-left: -5px;
+  margin: -25px 0 0 -5px;
   transition: all 0.5s ease-in-out;
-  top: -3px;
+  top: 50%;
 }
 
 .Timeline .Plane::after {
@@ -24,6 +25,7 @@
 
 .Timeline .Flight {
   border-left: 2px solid #000;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -32,7 +34,11 @@
 
 .Timeline .Flight.Blue {
   background-color: #007cbf;
+  top: 0;
+  bottom: 50%;
 }
 .Timeline .Flight.Red {
   background-color: red;
+  top: 50%;
+  bottom: 0;
 }
